# libxml2-all-platforms

./: CMakeLists.txt  README.md  main.c  test1.xml
cmake/: ExternalLibXML2.cmake
